# Vastlands-GB

./: .gitignore  CMakeLists.txt  README.md
include/: axe.h  bkg.h  input.h  isometric.h  palettes.h  player.h  player_attack.h  player_down.h  player_left.h  player_up.h  sprite_data.h  tiles.h  titlescreen.h  window_tiles.h
res/: axe.c  bkg.c  bkg.h  bkg_map.c  bkg_map_attributes.c  bkg_palettes.c  bkg_tiles.c  dungeon.c  dungeon.h  dungeon1.c  dungeon1.h  palettes.c  palettes.h  player.c  player.h  player_attack.c  player_down.c  player_left.c  player_up.c  tiles.c  titlescreen.c  window_tiles.c
src/: camera.c  camera.h  gbc_hicolor.c  input.c  isometric.c  main.c  main.c.bak  main.h  player.c  player.h  sprite_data.c  titlescreen.c  titlescreen.h
